5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1575_1334.log
== TEST (2019-03-12 17:25:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:27:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", %8 )

print("Potenciacao: ", ...)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", %8 )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 58/10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 58//10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 55//10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 58//10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 56//10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 56/10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 88/10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 88//10 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 88//10 )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.121442
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
